sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:8: error: not found: value color
    color = getColor(i);
    ^DutchFlagAlgo:9: error: missing arguments for method getColor in class DutchFlagEntity;
follow this method with `_' if you want to treat it as a partially applied function
    getColor match {
    ^